Translation updated by Ivar Smolin.
2006-04-05  Priit Laes  <amd@store20.com>

	* et.po: Translation updated by Ivar Smolin.

--- a/po/et.po
+++ b/po/et.po
@@ -16,7 +16,7 @@ msgstr ""
 "Project-Id-Version: nautilus HEAD\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-03-19 07:15+0100\n"
-"PO-Revision-Date: 2006-03-19 16:19+0200\n"
+"PO-Revision-Date: 2006-04-05 08:35+0300\n"
 "Last-Translator: Ivar Smolin <okul@linux.ee>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
@@ -317,7 +317,7 @@ msgstr ""
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:3
 msgid "Computer icon visible on desktop"
-msgstr "Arvuti ikoon on töölaual nähtav"
+msgstr "Arvutiikoon on töölaual nähtav"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:4
 msgid "Criteria for search bar searching"
@@ -453,7 +453,7 @@ msgstr ""
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:33
 msgid "Home icon visible on desktop"
-msgstr "Koduikoon on töölaual nähtav"
+msgstr "Kodukataloogiikoon on töölaual nähtav"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:34
 msgid ""
@@ -558,33 +558,32 @@ msgstr ""
 msgid ""
 "If this is set to true, an icon linking to the Network Servers view will be "
 "put on the desktop."
-msgstr ""
-"Kui see valik on aktiivne, siis töölaual näidatakse ikooni, mis viitab "
-"võrguserverite vaatele."
+msgstr "Kui märgitud, siis on võrguserveritele viitav ikoon töölaual nähtav."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:50
 msgid ""
 "If this is set to true, an icon linking to the computer location will be put "
 "on the desktop."
-msgstr "Kui valik on märgitud, viitab ikoon töölaualt asukohale 'Arvuti'. "
+msgstr "Kui märgitud, siis on arvutiikoon töölaual nähtav."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:51
 msgid ""
 "If this is set to true, an icon linking to the home folder will be put on "
 "the desktop."
-msgstr "Kui valik on märgitud, viitab ikoon töölaualt kodukataloogile."
+msgstr "Kui märgitud, siis on kodukataloogile viitav ikoon töölaual nähtav."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:52
 msgid ""
 "If this is set to true, an icon linking to the trash will be put on the "
 "desktop."
-msgstr "Kui valik on märgitud, viitab ikoon töölaualt prügikasti."
+msgstr "Kui märgitud, siis on prügikastile viitav ikoon töölaual nähtav."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:53
 msgid ""
 "If this is set to true, icons linking to mounted volumes will be put on the "
 "desktop."
-msgstr "Töölaud näitab ühendatud kettaseadmete ikoone."
+msgstr ""
+"Ku märgitud, siis on ühendatud kettaseadmete ikoonid töölaual nähtaval."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:54
 msgid ""
@@ -611,12 +610,12 @@ msgstr ""
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:57
 msgid ""
 "If true, labels will be placed beside icons rather than underneath them."
-msgstr "Kui valik on märgitud, näidatakse silte ikooni kõrval, mitte all."
+msgstr "Kui märgitud, siis näidatakse silte ikooni kõrval, mitte all."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:58
 msgid "If true, new windows will use manual layout by default."
 msgstr ""
-"Kui valik on märgitud, paigutatakse ikoonid uutes akendes vaikimisi käsitsi."
+"Kui märgitud, siis kasutavad uued aknad vaikimisi käsitsi ikoonipaigutust."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:59
 msgid ""
@@ -778,23 +777,29 @@ msgstr "Külgpaanvaade uues aknas aknas"
 msgid ""
 "This name can be set if you want a custom name for the computer icon on the "
 "desktop."
-msgstr "Arvutiikooni nime muutmine töölaual."
+msgstr ""
+"See nimi määratakse juhul, kui soovitakse töölaual oleva arvutiikooni nime "
+"kohandada."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:93
 msgid ""
 "This name can be set if you want a custom name for the home icon on the "
 "desktop."
-msgstr "Kodukataloogi nime muutmine töölaual."
+msgstr ""
+"See nimi määratakse juhul, kui soovitakse töölaual oleva kodukataloogiikooni "
+"nime kohandada."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:94
 msgid ""
 "This name can be set if you want a custom name for the trash icon on the "
 "desktop."
-msgstr "Prügikasti nime muutmine töölaual."
+msgstr ""
+"See nimi määratakse juhul, kui soovitakse töölaual oleva prügukastiikooni "
+"nime kohandada."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:95
 msgid "Trash icon visible on desktop"
-msgstr "Prügikasti ikoon on töölaual nähtav"
+msgstr "Prügikastiikoon on töölaual nähtav"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:96
 msgid "Type of click used to launch/open files"
