Remove unused pattern file. (#337353)
2006-04-07  Martin Wehner  <martin.wehner@gmail.com>

	* data/patterns/.striated.png:
	* data/patterns/Makefile.am:
	Remove unused pattern file. (#337353)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2006-04-07  Martin Wehner  <martin.wehner@gmail.com>
+
+	* data/patterns/.striated.png:
+	* data/patterns/Makefile.am:
+	Remove unused pattern file. (#337353)
+
 2006-03-30  Christian Neumair  <chris@gnome-de.org>
 
 	* src/file-manager/fm-directory-view.c:
