--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2006-04-08  Martin Wehner  <martin.wehner@gmail.com>
+
+	* src/file-manager/fm-directory-view.c:
+	(set_script_environment_variables),
+	(unset_script_environment_variables):
+	* src/nautilus-main.c: (main):
+	* src/nautilus-shell.c: (corba_restart):
+	Use g_(un)setenv instead of their eel_ counterparts.
+
 2006-04-07  Martin Wehner  <martin.wehner@gmail.com>
 
 	* src/nautilus-places-sidebar.c: (add_place), (update_places),
