Update progress dialog when setting its operation string, also set
2006-04-08  Christian Neumair  <chris@gnome-de.org>

	* libnautilus-private/nautilus-file-operations-progress.c:
	(nautilus_file_operations_progress_update),
	(nautilus_file_operations_progress_set_operation_string):
	Update progress dialog when setting its operation string,
	also set operation string during preflight.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2006-04-08  Christian Neumair  <chris@gnome-de.org>
+
+	* libnautilus-private/nautilus-file-operations-progress.c:
+	(nautilus_file_operations_progress_update),
+	(nautilus_file_operations_progress_set_operation_string):
+	Update progress dialog when setting its operation string,
+	also set operation string during preflight.
+
 2006-04-08  Martin Wehner  <martin.wehner@gmail.com>
 
 	* src/file-manager/fm-directory-view.c:
