--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-04-08  Nikos Charonitakis  <nikosx@gmail.com>
+
+	* el.po: Updated Greek translation.
+
 2006-04-05  Priit Laes  <amd@store20.com>
 
 	* et.po: Translation updated by Ivar Smolin.
