--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-04-10  Artur Flinta  <aflinta@cvs.gnome.org>
+
+	* pl.po: Updated Polish translation by GNOME PL Team.
+
 2006-04-08  Nikos Charonitakis  <nikosx@gmail.com>
 
 	* el.po: Updated Greek translation.
