New file listing all supported languages.
2006-04-10  Martin Wehner  <martin.wehner@gmail.com>

	* po/LINGUAS: New file listing all supported languages.

	* configure.in: Use po/LINGUAS instead of including all languages
	directly in this file. See the wiki for more information:
	http://live.gnome.org/GnomeGoals/PoLinguas

	Patch from Brian Pepple  <bdpepple@gmail.com>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2006-04-10  Martin Wehner  <martin.wehner@gmail.com>
+
+	* po/LINGUAS: New file listing all supported languages.
+
+	* configure.in: Use po/LINGUAS instead of including all languages
+	directly in this file. See the wiki for more information:
+	http://live.gnome.org/GnomeGoals/PoLinguas
+
+	Patch from Brian Pepple  <bdpepple@gmail.com>
+
 2006-04-08  Christian Neumair  <chris@gnome-de.org>
 
 	* libnautilus-private/nautilus-file-operations-progress.c:
