Use smaller close icon for the sidebar.
2006-04-11  Martin Wehner  <martin.wehner@gmail.com>

	* src/nautilus-side-pane.c: (nautilus_side_pane_init):
	Use smaller close icon for the sidebar.

	Patch from Yang Hong <yanghong@ccoss.com.cn>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2006-04-11  Martin Wehner  <martin.wehner@gmail.com>
+
+	* src/nautilus-side-pane.c: (nautilus_side_pane_init):
+	Use smaller close icon for the sidebar.
+
+	Patch from Yang Hong <yanghong@ccoss.com.cn>
+
 2006-04-10  Martin Wehner  <martin.wehner@gmail.com>
 
 	* libnautilus-private/nautilus-icon-dnd.c:
