--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+=== nautilus 2.14.1 ===
+
+2006-04-11  Martin Wehner  <martin.wehner@gmail.com>
+
+	* NEWS:
+	Update for release
+
+	* configure.in:
+	Require eel 2.14.1
+
 2006-04-11  Martin Wehner  <martin.wehner@gmail.com>
 
 	* src/nautilus-side-pane.c: (nautilus_side_pane_init):
