--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,20 @@
+Major changes in 2.14.1 are:
+* Translation updates
+* Code cleanups
+* Use --no-desktop option for all desktop files
+* Startup performance improvements
+* Make files copied from read-only source writeable
+* Don't allow bookmarking x-desktop:///
+* Add help buttons to several dialogs
+* Fix SVG file identification
+* Properly break down URIs for connect to server ui
+* Don't reposition icons on reload
+* Show unmounted but user-visible drives in the places sidebar
+* Display more info in the progress dialog when preparing 
+* Smarter DnD target selection
+* Smaller close icon in the sidebar title
+* GnomeGoals: Use po/LINGUAS
+
 Major changes in 2.14.0 are:
 * Fix deadlock when dragging over list view in some conditions
 * Fix keynav details in text beside icon mode
