--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-04-14  Miloslav Trmac  <mitr@volny.cz>
+
+	* cs.po: Updated Czech translation by Lukas Novotny.
+
 2006-04-14  Åsmund Skjæveland  <aasmunds@fys.uio.no>
 
 	* nn.po: Updated Norwegian Nynorsk translation.
