--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-04-15  Jérémy Ar Floc'h  <jeremy.lefloch@gmail.com>
+
+	* br.po: Added Breton translation.
+	* LINGUAS: Added Breton (br).
+
 2006-04-14  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Updated Czech translation by Lukas Novotny.
