Updated nautilus zh_CN translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-04-16  Funda Wang  <fundawang@linux.net.cn>
+
+	* zh_CN.po: Updated Simplified Chinese translation.
+
 2006-04-15  Jérémy Ar Floc'h  <jeremy.lefloch@gmail.com>
 
 	* br.po: Added Breton translation.
