--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-04-20  Inaki Larranaga  <dooteo@euskalgnu.org>
+
+	* eu.po: Updated Basque translation.
+
 2006-04-18  Vladimer Sichinava  <alinux@siena.linux.it>
 
         * ka.po: Updated Georgian translation.
