Updated Hebrew translation

--- a/po/he.po
+++ b/po/he.po
@@ -1197,12 +1197,13 @@ msgid ""
 "\"%s\" cannot be deleted because you do not have permissions to modify its "
 "parent folder."
 msgstr ""
-"\"%s\" לא ניתן למחיקה כיוון שאין לך הרשאות לערוך אותו את תיקיית ההורה שלו."
+"‏\"%s\" לא ניתן למחיקה כיוון שאין לך הרשאות לערוך אותו את תיקיית ההורה שלו."
 
 #: ../libnautilus-private/nautilus-file-operations.c:691
 #, c-format
 msgid "\"%s\" cannot be deleted because it is on a read-only disk."
-msgstr "\"%s\" לא ניתן למחיקה כיוון שזהו דיסק לקריאה בלבד."
+msgstr ""
+"‏\"%s\" לא ניתן למחיקה כיוון שזהו דיסק לקריאה בלבד."
 
 #: ../libnautilus-private/nautilus-file-operations.c:722
 #, c-format
@@ -1210,14 +1211,15 @@ msgid ""
 "\"%s\" cannot be moved because you do not have permissions to change it or "
 "its parent folder."
 msgstr ""
-"\"%s\" לא ניתן להזזה כיוון שאין לך הרשאות לערוך אותו או את תיקיית ההורה שלו."
+"‏\"%s\" לא ניתן להזזה כיוון שאין לך הרשאות לערוך אותו או את תיקיית ההורה שלו."
 
 #: ../libnautilus-private/nautilus-file-operations.c:727
 #, c-format
 msgid ""
 "Cannot move \"%s\" because it or its parent folder are contained in the "
 "destination."
-msgstr "לא ניתן להזיז את \"%s\" כיוון שהוא או תיקיית ההורה נמצאים ביעד."
+msgstr ""
+"לא ניתן להעביר את \"%s\" כיוון שהוא או תיקיית ההורה נמצאים ביעד."
 
 #: ../libnautilus-private/nautilus-file-operations.c:737
 #, c-format
@@ -1225,7 +1227,7 @@ msgid ""
 "Cannot move \"%s\" to the trash because you do not have permissions to "
 "change it or its parent folder."
 msgstr ""
-"לא ניתן להזיז את \"%s\" לאשפה כיוון שאין לך הרשאות לערוך אותו או את תיקיית "
+"לא ניתן להעביר את \"%s\" לאשפה כיוון שאין לך הרשאות לערוך אותו או את תיקיית "
 "ההורה שלו."
 
 #: ../libnautilus-private/nautilus-file-operations.c:759
@@ -1235,7 +1237,8 @@ msgstr "שגיאה במהלך העתקה."
 #: ../libnautilus-private/nautilus-file-operations.c:760
 #, c-format
 msgid "\"%s\" cannot be copied because you do not have permissions to read it."
-msgstr "\"%s\" לא יכול להיות מועתק כיוון שאין לך הרשאות לקרוא אותו."
+msgstr ""
+"‏\"%s\" לא יכול להיות מועתק כיוון שאין לך הרשאות לקרוא אותו."
 
 #: ../libnautilus-private/nautilus-file-operations.c:780
 #: ../libnautilus-private/nautilus-file-operations.c:801
@@ -1303,17 +1306,20 @@ msgstr "האם ברצונך להמשיך?"
 #: ../libnautilus-private/nautilus-file-operations.c:859
 #, c-format
 msgid "Error \"%s\" while moving \"%s\"."
-msgstr "שגיאה \"%s\" במהלך הזזת \"%s\"."
+msgstr ""
+"שגיאה \"%s\" במהלך הזזת \"%s\"."
 
 #: ../libnautilus-private/nautilus-file-operations.c:863
 #, c-format
 msgid "Error \"%s\" while creating a link to \"%s\"."
-msgstr "שגיאה \"%s\" במהלך יצירת קישור ל \"%s\"."
+msgstr ""
+"שגיאה \"%s\" במהלך יצירת קישור ל \"%s\"."
 
 #: ../libnautilus-private/nautilus-file-operations.c:869
 #, c-format
 msgid "Error \"%s\" while deleting \"%s\"."
-msgstr "שגיאה \"%s\" במהלך מחיקת \"%s\"."
+msgstr ""
+"שגיאה \"%s\" במהלך מחיקת \"%s\"."
 
 #: ../libnautilus-private/nautilus-file-operations.c:884
 #, c-format
