--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2006-04-25  Alexander Larsson  <alexl@redhat.com>
+
+	* configure.in:
+	Bump version to 2.15.1
+	2.14 development continues on gnome-2-14 branch.
+
+==== gnome-2-14 branched from here ===
+	
 2006-04-25  Christian Neumair  <chris@gnome-de.org>
 
 	* configure.in: 
