Fix width of text selection in text-below-icons mode. (it was to wide.)
2006-04-26  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-icon-canvas-item.c:
	Fix width of text selection in text-below-icons mode.
	(it was to wide.)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2006-04-26  Alexander Larsson  <alexl@redhat.com>
 
+	* libnautilus-private/nautilus-icon-canvas-item.c:
+	Fix width of text selection in text-below-icons mode.
+	(it was to wide.)
+	
+2006-04-26  Alexander Larsson  <alexl@redhat.com>
+
 	* configure.in:
 	Remove popt
 	
