Fix width of text selection in text-below-icons mode. (it was to wide.)
2006-04-26  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-icon-canvas-item.c:
	Fix width of text selection in text-below-icons mode.
	(it was to wide.)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2006-04-26  Alexander Larsson  <alexl@redhat.com>
+
+	* libnautilus-private/nautilus-icon-canvas-item.c:
+	Fix width of text selection in text-below-icons mode.
+	(it was to wide.)
+	
 2006-04-25  Christian Neumair  <chris@gnome-de.org>
 
 	* configure.in: 
